--- a/HTMLBasic.html
+++ b/HTMLBasic.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Basic Tutorial</title>
+    <title>HTML Basic</title>
 </head>
 <body>
     <h1>HTML Documents</h1>
@@ -26,5 +26,10 @@
     <hr>
     <h1>HTML Images</h1>
     <p>HTML images are defined with the &lt;img&gt; tag. The source file (src), alternative text (alt), width, and height are provided as attributes. For example, &lt;img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142"&gt;</p>
+    <hr>
+    <h1>HTML Elements</h1>
+    <p>The HTML element is everything from the start tag to the end tag:</p>
+    <p>Some HTML elements have no content (like the &lt;br&gt; element). These elements are called empty elements. Empty elements do not have an end tag!</p>
+    <p>HTML elements can be nested (this means that elements can contain other elements). All HTML documents consist of nested HTML elements.</p>
 </body>
 </html>
