--- a/HTMLImages.html
+++ b/HTMLImages.html
@@ -4,6 +4,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Images</title>
+    <style>
+        body{
+            background-image: url('main.png');
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+            background-attachment: fixed;
+        }
+    </style>
 </head>
 <body>
     <h1>HTML Images Syntax</h1>
@@ -51,5 +59,36 @@
         Use the CSS float property to let the image float to the left or to the right
     </pre>
     <hr>
+    <h1>Background Images</h1>
+    <p>To add a background image on an HTML element, use the HTML style attribute and the CSS background-image property:</p>
+    <p style="background-image: url('background.jpg');">
+        You can specify background images<br>
+        for any visible HTML element.<br>
+        In this example, the background image<br>
+        is specified for a p element.<br>
+        By default, the background-image<br>
+        will repeat itself in the direction(s)<br>
+        where it is smaller than the element<br>
+        where it is specified. (Try resizing the<br>
+        browser window to see how the<br>
+        background image behaves.
+    </p>
+    <h5>Background Repeat</h5>
+    <p>If the background image is smaller than the element, the image will repeat itself, horizontally and vertically, until it reaches the end of the element</p>
+    <p>To avoid the background image from repeating itself, set the background-repeat property to no-repeat.</p>
+    <h5>Background Cover</h5>
+    <pre>
+        If you want the background image to cover the entire element, you can set the background-size property to cover.
+        Also, to make sure the entire element is always covered, set the background-attachment property to fixed:
+        This way, the background image will cover the entire element, with no stretching (the image will keep its original proportions)
+    </pre>
+    <hr>
+    <h1>The HTML picture Element</h1>
+    <p>Note: Always specify an img element as the last child element of the picture element. The img element is used by browsers that do not support the picture element, or if none of the source tags match.</p>
+    <picture>
+        <source media="(min-width: 650px)" srcset="work5.jpg">
+        <source media="(min-width: 465px)" srcset="work6.jpg">
+        <img src="background.jpg" alt="background image">
+    </picture>
 </body>
 </html>
